include/procedural/memory/grammar/.antlr/ExtentedHATPParser.java
// Generated from /home/avigne/Projets/ArchiThese/catkin_ws/src/Procedural/include/procedural/memory/grammar/ExtentedHATPParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExtentedHATPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STRING=1, HTN=2, ACTIONS=3, ACTION=4, PRECONDITIONS=5, RECOGNITION=6, 
		DESCRIPTION=7, SEQUENCE=8, NOT=9, REQUIRED=10, EXECUTION=11, EFFECTS=12, 
		TASKS=13, TASK=14, GOAL=15, SUBTASKS=16, COST=17, DURATION=18, SELECT=19, 
		PACKAGE=20, INCLUDE=21, WHERE=22, ATTENTES=23, ATTENTE=24, CONDITIONS=25, 
		ROLE=26, ENTRYSTATE=27, METHODS=28, PARAMETERS=29, PRIORITIES=30, PRIORITY=31, 
		EVENT=32, OBJECTIVES=33, PRIORITY_LEVEL=34, WS=35, ADD_IN_SET=36, REMOVE_FROM_SET=37, 
		EQUAL=38, TEST_EQUAL=39, TEST_DIFF=40, TEST_SET_IN=41, TEST_SET_NOT_IN=42, 
		SUP=43, SUP_EQUAL=44, INF=45, INF_EQUAL=46, SUP_TILD=47, PLUS=48, MINUS=49, 
		TIMES=50, SLASH=51, SEMICOLON=52, POINT=53, COLON=54, QUESTIONMARK=55, 
		COMMENT=56, LINE_COMMENT=57, OpenPar=58, ClosePar=59, OpenClosePar=60, 
		OpenCurly=61, CloseCurly=62, OpenCloseCurly=63, Comma=64, IDENTIFIER=65, 
		TYPE=66, VARNAME=67, ATTRIBUT=68, NUMBER=69, SPACE=70, PRACTICE_FRAMES=71, 
		PRACTICE_FRAME=72, PRACTICES_LIST=73, ROLES=74, OBJECTS=75, RULES=76, 
		CAPACITES=77, CAPACITE=78, CAN_SATISFY_EXPECTATIONS=79, OpenSquare=80, 
		CloseSquare=81, TYPE_KW=82, EXPECTS_FROM=83, PRACTICES=84, PRACTICE=85, 
		COMPETENCES=86;
	public static final int
		RULE_root = 0, RULE_include_bloc = 1, RULE_inclusion = 2, RULE_package_link = 3, 
		RULE_link = 4, RULE_actions_bloc = 5, RULE_action = 6, RULE_preconditions_bloc = 7, 
		RULE_query = 8, RULE_where_clause = 9, RULE_where_statement = 10, RULE_triplet_with_dot = 11, 
		RULE_triplet_pattern = 12, RULE_triplet_query = 13, RULE_source = 14, 
		RULE_effects_bloc = 15, RULE_cost_bloc = 16, RULE_duration_bloc = 17, 
		RULE_description_bloc = 18, RULE_triplet = 19, RULE_execution_bloc = 20, 
		RULE_exec_action = 21, RULE_exec_action_arg = 22, RULE_arg = 23, RULE_name = 24, 
		RULE_topic_name = 25, RULE_json_struct = 26, RULE_json_pair = 27, RULE_value = 28, 
		RULE_recognition_bloc = 29, RULE_sequence_bloc = 30, RULE_sequence = 31, 
		RULE_parameters_bloc = 32, RULE_parameter = 33, RULE_attentes_bloc = 34, 
		RULE_role = 35, RULE_attente = 36, RULE_conditions = 37, RULE_tasks_bloc = 38, 
		RULE_task = 39, RULE_entry_state = 40, RULE_goal = 41, RULE_methods_bloc = 42, 
		RULE_method = 43, RULE_subtask_bloc = 44, RULE_subtask_line = 45, RULE_event = 46, 
		RULE_priority_level = 47, RULE_objectifs = 48, RULE_priorities_bloc = 49, 
		RULE_priority = 50, RULE_pratices_frames_bloc = 51, RULE_practice_frame = 52, 
		RULE_practices_list = 53, RULE_roles_list = 54, RULE_role_name = 55, RULE_practice_name = 56, 
		RULE_description_practice = 57, RULE_objects_bloc = 58, RULE_object_item = 59, 
		RULE_rules_bloc = 60, RULE_rule_item = 61, RULE_roles_with_conditions = 62, 
		RULE_role_with_condition = 63, RULE_roles_with_attentes = 64, RULE_role_with_attente = 65, 
		RULE_attentes_list = 66, RULE_capacites_list = 67, RULE_capacite = 68, 
		RULE_can_satisfy_expectations = 69, RULE_expectation_type_list = 70, RULE_description_capacite = 71, 
		RULE_attente_extended = 72, RULE_attente_type = 73, RULE_expects_from = 74, 
		RULE_role_list = 75, RULE_description_attente = 76, RULE_practices_bloc = 77, 
		RULE_practice = 78, RULE_conditions_practices = 79, RULE_competences = 80, 
		RULE_competence = 81, RULE_id_method = 82, RULE_id = 83, RULE_numeric_value = 84, 
		RULE_subject = 85, RULE_variable = 86, RULE_literal = 87, RULE_my_self_var = 88, 
		RULE_predicate = 89, RULE_object = 90, RULE_arguments = 91, RULE_type = 92, 
		RULE_varname = 93, RULE_comment = 94, RULE_ignore = 95, RULE_operator = 96, 
		RULE_sentence = 97, RULE_word = 98;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "include_bloc", "inclusion", "package_link", "link", "actions_bloc", 
			"action", "preconditions_bloc", "query", "where_clause", "where_statement", 
			"triplet_with_dot", "triplet_pattern", "triplet_query", "source", "effects_bloc", 
			"cost_bloc", "duration_bloc", "description_bloc", "triplet", "execution_bloc", 
			"exec_action", "exec_action_arg", "arg", "name", "topic_name", "json_struct", 
			"json_pair", "value", "recognition_bloc", "sequence_bloc", "sequence", 
			"parameters_bloc", "parameter", "attentes_bloc", "role", "attente", "conditions", 
			"tasks_bloc", "task", "entry_state", "goal", "methods_bloc", "method", 
			"subtask_bloc", "subtask_line", "event", "priority_level", "objectifs", 
			"priorities_bloc", "priority", "pratices_frames_bloc", "practice_frame", 
			"practices_list", "roles_list", "role_name", "practice_name", "description_practice", 
			"objects_bloc", "object_item", "rules_bloc", "rule_item", "roles_with_conditions", 
			"role_with_condition", "roles_with_attentes", "role_with_attente", "attentes_list", 
			"capacites_list", "capacite", "can_satisfy_expectations", "expectation_type_list", 
			"description_capacite", "attente_extended", "attente_type", "expects_from", 
			"role_list", "description_attente", "practices_bloc", "practice", "conditions_practices", 
			"competences", "competence", "id_method", "id", "numeric_value", "subject", 
			"variable", "literal", "my_self_var", "predicate", "object", "arguments", 
			"type", "varname", "comment", "ignore", "operator", "sentence", "word"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'HTN'", "'ACTIONS'", "'ACTION'", null, "'RECOGNITION'", 
			"'DESCRIPTION'", "'SEQUENCE'", "'NOT'", "'REQUIRED'", "'EXECUTION'", 
			"'EFFECTS'", null, null, null, "'SUBTASKS'", "'COST'", "'DURATION'", 
			"'SELECT'", "'package'", "'include'", "'WHERE'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'<<='", "'=>>'", 
			"'='", "'=='", "'!='", "'>>'", "'!>>'", "'>'", "'>='", "'<'", "'<='", 
			"'~>'", "'+'", "'-'", "'*'", "'/'", "';'", "'.'", "':'", "'?'", null, 
			null, "'('", "')'", "'()'", "'{'", "'}'", "'{}'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STRING", "HTN", "ACTIONS", "ACTION", "PRECONDITIONS", "RECOGNITION", 
			"DESCRIPTION", "SEQUENCE", "NOT", "REQUIRED", "EXECUTION", "EFFECTS", 
			"TASKS", "TASK", "GOAL", "SUBTASKS", "COST", "DURATION", "SELECT", "PACKAGE", 
			"INCLUDE", "WHERE", "ATTENTES", "ATTENTE", "CONDITIONS", "ROLE", "ENTRYSTATE", 
			"METHODS", "PARAMETERS", "PRIORITIES", "PRIORITY", "EVENT", "OBJECTIVES", 
			"PRIORITY_LEVEL", "WS", "ADD_IN_SET", "REMOVE_FROM_SET", "EQUAL", "TEST_EQUAL", 
			"TEST_DIFF", "TEST_SET_IN", "TEST_SET_NOT_IN", "SUP", "SUP_EQUAL", "INF", 
			"INF_EQUAL", "SUP_TILD", "PLUS", "MINUS", "TIMES", "SLASH", "SEMICOLON", 
			"POINT", "COLON", "QUESTIONMARK", "COMMENT", "LINE_COMMENT", "OpenPar", 
			"ClosePar", "OpenClosePar", "OpenCurly", "CloseCurly", "OpenCloseCurly", 
			"Comma", "IDENTIFIER", "TYPE", "VARNAME", "ATTRIBUT", "NUMBER", "SPACE", 
			"PRACTICE_FRAMES", "PRACTICE_FRAME", "PRACTICES_LIST", "ROLES", "OBJECTS", 
			"RULES", "CAPACITES", "CAPACITE", "CAN_SATISFY_EXPECTATIONS", "OpenSquare", 
			"CloseSquare", "TYPE_KW", "EXPECTS_FROM", "PRACTICES", "PRACTICE", "COMPETENCES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExtentedHATPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExtentedHATPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExtentedHATPParser.EOF, 0); }
		public List<Include_blocContext> include_bloc() {
			return getRuleContexts(Include_blocContext.class);
		}
		public Include_blocContext include_bloc(int i) {
			return getRuleContext(Include_blocContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<Actions_blocContext> actions_bloc() {
			return getRuleContexts(Actions_blocContext.class);
		}
		public Actions_blocContext actions_bloc(int i) {
			return getRuleContext(Actions_blocContext.class,i);
		}
		public List<Attentes_blocContext> attentes_bloc() {
			return getRuleContexts(Attentes_blocContext.class);
		}
		public Attentes_blocContext attentes_bloc(int i) {
			return getRuleContext(Attentes_blocContext.class,i);
		}
		public List<Tasks_blocContext> tasks_bloc() {
			return getRuleContexts(Tasks_blocContext.class);
		}
		public Tasks_blocContext tasks_bloc(int i) {
			return getRuleContext(Tasks_blocContext.class,i);
		}
		public List<Priorities_blocContext> priorities_bloc() {
			return getRuleContexts(Priorities_blocContext.class);
		}
		public Priorities_blocContext priorities_bloc(int i) {
			return getRuleContext(Priorities_blocContext.class,i);
		}
		public List<Pratices_frames_blocContext> pratices_frames_bloc() {
			return getRuleContexts(Pratices_frames_blocContext.class);
		}
		public Pratices_frames_blocContext pratices_frames_bloc(int i) {
			return getRuleContext(Pratices_frames_blocContext.class,i);
		}
		public List<Practices_blocContext> practices_bloc() {
			return getRuleContexts(Practices_blocContext.class);
		}
		public Practices_blocContext practices_bloc(int i) {
			return getRuleContext(Practices_blocContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(206);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INCLUDE:
					{
					setState(198);
					include_bloc();
					}
					break;
				case COMMENT:
				case LINE_COMMENT:
					{
					setState(199);
					comment();
					}
					break;
				case ACTIONS:
					{
					setState(200);
					actions_bloc();
					}
					break;
				case ATTENTES:
					{
					setState(201);
					attentes_bloc();
					}
					break;
				case TASKS:
					{
					setState(202);
					tasks_bloc();
					}
					break;
				case PRIORITIES:
					{
					setState(203);
					priorities_bloc();
					}
					break;
				case PRACTICE_FRAMES:
					{
					setState(204);
					pratices_frames_bloc();
					}
					break;
				case PRACTICES:
					{
					setState(205);
					practices_bloc();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(208); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 216172783198019592L) != 0) || _la==PRACTICE_FRAMES || _la==PRACTICES );
			setState(210);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Include_blocContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(ExtentedHATPParser.INCLUDE, 0); }
		public TerminalNode OpenCurly() { return getToken(ExtentedHATPParser.OpenCurly, 0); }
		public TerminalNode CloseCurly() { return getToken(ExtentedHATPParser.CloseCurly, 0); }
		public TerminalNode SEMICOLON() { return getToken(ExtentedHATPParser.SEMICOLON, 0); }
		public List<InclusionContext> inclusion() {
			return getRuleContexts(InclusionContext.class);
		}
		public InclusionContext inclusion(int i) {
			return getRuleContext(InclusionContext.class,i);
		}
		public Include_blocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_bloc; }
	}

	public final Include_blocContext include_bloc() throws RecognitionException {
		Include_blocContext _localctx = new Include_blocContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_include_bloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			match(INCLUDE);
			setState(213);
			match(OpenCurly);
			setState(217);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(214);
				inclusion();
				}
				}
				setState(219);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(220);
			match(CloseCurly);
			setState(221);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InclusionContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(ExtentedHATPParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(ExtentedHATPParser.STRING, i);
		}
		public TerminalNode SEMICOLON() { return getToken(ExtentedHATPParser.SEMICOLON, 0); }
		public Package_linkContext package_link() {
			return getRuleContext(Package_linkContext.class,0);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public InclusionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inclusion; }
	}

	public final InclusionContext inclusion() throws RecognitionException {
		InclusionContext _localctx = new InclusionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inclusion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			match(STRING);
			setState(226);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PACKAGE:
				{
				setState(224);
				package_link();
				}
				break;
			case SLASH:
			case IDENTIFIER:
				{
				setState(225);
				link();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(228);
			match(STRING);
			setState(229);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Package_linkContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(ExtentedHATPParser.PACKAGE, 0); }
		public List<TerminalNode> COLON() { return getTokens(ExtentedHATPParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ExtentedHATPParser.COLON, i);
		}
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public Package_linkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_link; }
	}

	public final Package_linkContext package_link() throws RecognitionException {
		Package_linkContext _localctx = new Package_linkContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_package_link);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(231);
			match(PACKAGE);
			setState(232);
			match(COLON);
			setState(233);
			match(COLON);
			setState(234);
			link();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LinkContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ExtentedHATPParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ExtentedHATPParser.IDENTIFIER, i);
		}
		public TerminalNode POINT() { return getToken(ExtentedHATPParser.POINT, 0); }
		public List<TerminalNode> SLASH() { return getTokens(ExtentedHATPParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(ExtentedHATPParser.SLASH, i);
		}
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
	}

	public final LinkContext link() throws RecognitionException {
		LinkContext _localctx = new LinkContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_link);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(237);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SLASH) {
				{
				setState(236);
				match(SLASH);
				}
			}

			setState(239);
			match(IDENTIFIER);
			setState(244);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SLASH) {
				{
				{
				setState(240);
				match(SLASH);
				setState(241);
				match(IDENTIFIER);
				}
				}
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(247);
			match(POINT);
			setState(248);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Actions_blocContext extends ParserRuleContext {
		public TerminalNode ACTIONS() { return getToken(ExtentedHATPParser.ACTIONS, 0); }
		public TerminalNode OpenCurly() { return getToken(ExtentedHATPParser.OpenCurly, 0); }
		public TerminalNode CloseCurly() { return getToken(ExtentedHATPParser.CloseCurly, 0); }
		public TerminalNode SEMICOLON() { return getToken(ExtentedHATPParser.SEMICOLON, 0); }
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public Actions_blocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actions_bloc; }
	}

	public final Actions_blocContext actions_bloc() throws RecognitionException {
		Actions_blocContext _localctx = new Actions_blocContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_actions_bloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(250);
			match(ACTIONS);
			setState(251);
			match(OpenCurly);
			setState(255);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ACTION) {
				{
				{
				setState(252);
				action();
				}
				}
				setState(257);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(258);
			match(CloseCurly);
			setState(259);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
